fix overflow-x

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,4 +21,5 @@ button:hover {
 
 body {
   background-color: #efeff5;
+  overflow-x: hidden;
 }
